# market-reaction-engine

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  requirements.txt
artifacts/: accounting_integrity_8k_domain_final_report.md  activist_13d_control_intent_domain_final_report.md  biotech_catalyst_agent_3d_report.md  biotech_catalyst_agent_3e_report.md  biotech_catalyst_agent_3f_report.json  biotech_catalyst_agent_3f_report.md  biotech_catalyst_analysis_events.csv  biotech_catalyst_analysis_events_ibb.csv  biotech_catalyst_backtest_report.json  biotech_catalyst_base_rates.csv  biotech_catalyst_calibration.csv  biotech_catalyst_duplicate_audit.csv  biotech_catalyst_event_study.csv  biotech_catalyst_event_study_ibb.csv  biotech_catalyst_execution_stress_report.md  biotech_catalyst_fresh_analysis_events.csv  biotech_catalyst_fresh_backtest_report.json  biotech_catalyst_fresh_base_rates.csv  biotech_catalyst_fresh_calibration.csv  biotech_catalyst_fresh_event_study.csv  biotech_catalyst_fresh_null_shuffle_distribution.csv  biotech_catalyst_fresh_null_shuffle_report.json  biotech_catalyst_fresh_outlier_robustness.md  biotech_catalyst_fresh_peer_event_study.csv  biotech_catalyst_fresh_peer_events.csv  biotech_catalyst_fresh_peer_report.json  biotech_catalyst_fresh_placebo_random_event_study.csv  biotech_catalyst_fresh_placebo_random_events.csv  biotech_catalyst_fresh_placebo_report.json  biotech_catalyst_fresh_placebo_shifted_event_study.csv  biotech_catalyst_fresh_placebo_shifted_events.csv  biotech_catalyst_fresh_source_direction_trades_h1.csv  biotech_catalyst_fresh_source_direction_trades_h10.csv  (+132 more)
docs/: DESIGN.md  (+25 more)
domain-finder/: .gitignore  Cargo.toml  LICENSE  README.md
domain-finder/config/: domain_finder.toml  orchestrator.toml
domain-finder/data/observations/: sample_domains.jsonl
domain-finder/docs/: DOMAIN_INTAKE_TEMPLATE.md  DOMAIN_RESEARCH_REGISTRY.md  PIPELINE.md
domain-finder/scripts/: install_task_scheduler.ps1  run_orchestrator_loop.ps1
domain-finder/src/: collectors.rs  config.rs  dashboard.rs  io.rs  lib.rs  main.rs  model.rs  operations.rs  orchestrator.rs  pipeline.rs  probes.rs  registry.rs  report.rs  scoring.rs
domain-finder/tests/: scoring_smoke.rs
(+3856 files in other folders)
