[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-reaction-engine"
version = "0.5.0"
description = "A point-in-time event study workbench for measuring market reactions to real-world events."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Arman Ozturk" }]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.2",
    "joblib>=1.2",
    "requests>=2.31",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
mre = "mre.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
